--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header><h1 class = "titulo">Info acerca de <em class = "tierno">gatos</em>:</h1></header>
       <article class = "herramientas>
         <nav title = "Herramientas">
-          <a href = "#colores title = "Que color vé un gato" aria-label = "color gatuno">Colores visibles para gatos</a>
+          <a href = "#colores" title = "Que color vé un gato" aria-label = "color gatuno">Colores visibles para gatos</a>
         </nav>
         <p>Varias herramientas para que aprendas cosas interesantes sobre los gatos.</p>
       </article>
