--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
       <meta charset = "utf-8" />
       <meta name = "viewport" content = "width = device-width, height = device-height, initial-scale = 1" />
       <meta name = "author" content = "Nico Pauer" />
-      <meta name = "keywords", content = "gatos" />
+      <meta name = "keywords" content = "gatos" />
       <title>Info Gatos</title>
       <link rel = "stylesheet" href = "gatuno.css" />
     </head>
     <body>
       <header><h1 class = "titulo">Info acerca de <em class = "tierno">gatos</em>:</h1></header>
-      <article class = "herramientas>
+      <article class = "herramientas">
         <nav title = "Herramientas">
           <a href = "#colores" title = "Que color vé un gato" aria-label = "color gatuno">Colores visibles para gatos</a>
         </nav>
