--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p>Varias herramientas para que aprendas cosas interesantes sobre los gatos.</p>
       </article>
       <section id = "colores" title = "Que color vé un gato" aria-label = "color gatuno">
+        <h1 class = "titulo">Averigua si un color es visible para tu gato</h1>
         <form id = "formulario-colores" title = "Ingrese nombre o código de color">
           <input id = "texto-colores" type = "text" placeholder = "#Color" />
           <button id = "boton-colores">Analizar</button>
