--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <meta name = "keywords" content = "gatos" />
       <title>Info Gatos</title>
       <link rel = "stylesheet" href = "gatuno.css" />
+      <link rel = "icon" href = "info-gatos.svg" />
     </head>
     <body>
       <header><h1 class = "titulo">Info acerca de <em class = "tierno">gatos</em>:</h1></header>
@@ -23,5 +24,7 @@
           <button id = "boton-colores">Analizar</button>
         </form>  
       </section>
+      <script type = "text/javascript" src = "info-gatos.js"></script>
+      <script type = "text/javascript" src = "principal.js"></script>
     </body>
   </html>
